Clean Rewardify Functionality, Add Rewardify Snippets, Minor CSS on RW Cart Blocks

--- a/assets/style.scss.liquid
+++ b/assets/style.scss.liquid
@@ -5360,4 +5360,11 @@ Collection grid section
 
 .rewardify-privileged-checkout {
   float: right;
+  margin-top: -10px;
+  margin-bottom: 25px;
+  margin-right: 5px;
+}
+
+#rw-cart-block {
+  margin-top: 50px;
 }
