--- a/templates/cart.liquid
+++ b/templates/cart.liquid
@@ -14,9 +14,9 @@
   {% if tag != 'WHOLESALER' and tag != 'Dealer' %}
 
     <style>
-/*      #rw-cart-block {
+      #rw-cart-block {
         display: none;
-      }*/
+      }
     </style>
 
   {% endif %}
