Add RW Store Credit Balance to Account Page

--- a/assets/style.scss.liquid
+++ b/assets/style.scss.liquid
@@ -5360,11 +5360,24 @@ Collection grid section
 
 .rewardify-privileged-checkout {
   float: right;
-  margin-top: -10px;
+  margin-top: 10px;
   margin-bottom: 25px;
-  margin-right: 5px;
 }
 
 #rw-cart-block {
   margin-top: 50px;
+}
+
+#rw-account-style {
+  text-align: center;
+  padding-top: 10px;
+  padding-right: 10px;
+  padding-left: 10px;
+  background-clip: padding-box;
+  float: left;
+}
+
+#rewardify-account-page-balance {
+  font-size: 16px;
+  font-weight: bold;
 }
