--- a/snippets/product.liquid
+++ b/snippets/product.liquid
@@ -16,11 +16,11 @@
 <p>
     
     <script>
-    var privilegedPrice = Rewardify.getPrivilegedPrice(['{{product.tags | join: "','"}}'], {{ current_variant.price }});
-    if (typeof privilegedPrice !== 'undefined') {
-      document.write("<span>Privileged Price</span>");
-      document.write("<span id='PrivilegedProductPrice' class='product-single__price'>" + privilegedPrice + "</span>");
-    }
+    // var privilegedPrice = Rewardify.getPrivilegedPrice(['{{product.tags | join: "','"}}'], {{ current_variant.price }});
+    // if (typeof privilegedPrice !== 'undefined') {
+    //   document.write("<span>Privileged Price</span>");
+    //   document.write("<span id='PrivilegedProductPrice' class='product-single__price'>" + privilegedPrice + "</span>");
+    // }
     </script>
     
 <p>
