--- a/templates/customers/account.liquid
+++ b/templates/customers/account.liquid
@@ -110,8 +110,10 @@
       {% endif %}
 
       <p><a href="/account/addresses">{{ 'customer.account.view_addresses' | t }} ({{ customer.addresses_count }})</a></p>
-    </div>
 
+        <div id="rewardify-account-insert"></div>
+
+    </div>
   </div>
 
   {% if paginate.pages > 1 %}
