Enlarge Home Page Title Font + Subheader Font

--- a/assets/style.scss.liquid
+++ b/assets/style.scss.liquid
@@ -2667,7 +2667,8 @@ $searchWidth: 80px;
   text-align: center;
   font-weight: bold;
   opacity: 0.75;
-  font-size: 1em;
+  /*font-size: 1em;*/
+  font-size: 20px;
   padding-bottom: $gutter/2;
   margin-bottom: $gutter;
   position: relative;
@@ -5380,4 +5381,8 @@ Collection grid section
 #rewardify-account-page-balance {
   font-size: 16px;
   font-weight: bold;
+}
+
+#title-home-index {
+  font-size: 45px;
 }
